# Backend/src/routes/user.routes.js
@@ -1,9 +1,7 @@
 import express from "express";
 import {
-  checkIfUserVoted,
   getProfile,
   login,
-  registerAsVoter,
   registerUser,
 } from "../controllers/user.controller.js";
 import {
@@ -11,16 +9,11 @@ import {
   validateUserRegistration,
 } from "../validators/user.validator.js";
 import authenticate from "../middlewares/auth.middleware.js";
-import voter from "../middlewares/voter.middleware.js";
 const router = express.Router();
 
 router.get("/profile", authenticate, getProfile);
 
-router.get("/has-voted", authenticate, voter, checkIfUserVoted);
-
 router.post("/register", validateUserRegistration, registerUser);
-
-router.post("/voter/register", validateUserRegistration, registerAsVoter);
 
 router.post("/login", validateLogin, login);
 
