# Backend/swagger.json
@@ -5,8 +5,8 @@
     "title": "EUCL Token System",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
-      "name": "MIZERO Eloi",
-      "email": "eloimizero123@gmail.com"
+      "name": "Verite Iradukunda",
+      "email": "veriteiradukunda14@gmail.com"
     },
     "version": "1.0.0"
   },
@@ -18,10 +18,6 @@
     {
       "name": "PURCHASED TOKEN OPERATIONS",
       "description": "Operations on candidates"
-    },
-    {
-      "name": "VOTING OPERATIONS",
-      "description": "Operations on voting"
     }
   ],
   "security": [
@@ -223,166 +219,6 @@
       "get": {
         "tags": ["USER OPERATIONS"],
         "summary": "Get user profile",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/candidates/as-voter": {
-      "get": {
-        "tags": ["CANDIDATE OPERATIONS"],
-        "summary": "Get candidates as a voter",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/candidates/as-admin": {
-      "get": {
-        "tags": ["CANDIDATE OPERATIONS"],
-        "summary": "Get candidates as an admin",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/candidates/register": {
-      "post": {
-        "tags": ["CANDIDATE OPERATIONS"],
-        "summary": "Register a candidate",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "type": "object",
-            "consumes": "application/json",
-            "properties": {
-              "firstname": {
-                "type": "string",
-                "required": "true"
-              },
-              "lastname": {
-                "type": "string",
-                "required": "true"
-              },
-              "nationalId": {
-                "type": "string",
-                "required": "true"
-              },
-              "profilePicture": {
-                "type": "string",
-                "required": "true"
-              },
-              "missionStatement": {
-                "type": "string",
-                "required": "true"
-              },
-              "gender": {
-                "type": "string",
-                "enum": ["MALE", "FEMALE"],
-                "required": "true"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/candidates/vote": {
-      "post": {
-        "tags": ["VOTING OPERATIONS"],
-        "summary": "Vote a candidate",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "type": "object",
-            "consumes": "application/json",
-            "properties": {
-              "candidateId": {
-                "type": "string",
-                "required": "true",
-                "format": "uuid"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Invalid data"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        }
-      }
-    },
-    "/users/has-voted": {
-      "get": {
-        "tags": ["VOTING OPERATIONS"],
-        "summary": "Check if user has voted",
         "consumes": ["application/json"],
         "produces": ["application/json"],
         "responses": {
